--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -9,7 +9,8 @@
 	<packaging>jar</packaging>
 
 	<name>App</name>
-	<description>Demo project for Spring Boot</description>
+	<description>spring-homework-jpa</description>
+	<url>https://github.com/anna2serg/spring-homework-jpa</url>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -29,7 +30,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.shell</groupId>
+			<artifactId>spring-shell-starter</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
