--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,5 +1,7 @@
 spring.shell.interactive.enabled: true
 
+spring.profiles.active: prod
+spring.datasource.platform: prod
 spring.datasource.initialization-mode: always
 spring.jpa.hibernate.ddl-auto: none
 spring.datasource.url: jdbc:postgresql://localhost:5433/bookcardDB 
